[tool.poetry]
name = "otto8-log-tool"
version = "0.1.0"
description = ""
authors = ["Yingbei <yingbei@acorn.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.5"
wget = "^3.2"
jsonpickle = "^4.0.0"
cachetools = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
